<resources>
    <string name="app_name">Tip Calculator</string>
    <string name="cost">Cost of Service</string>
    <string name="service">How was to service??</string>
    <string name="tip_amount">Tip Amount : %s</string>
    <string name="amazing">Amazing ( 20% )</string>
    <string name="good">Good ( 15% )</string>
    <string name="ok">OK ( 10% )</string>
    <string name="not_bad">Not Bad ( 05% )</string>
    <string name="calculate">Calculate</string>
    <string name="round">Round Up Tip</string>
</resources>